# trolley

./: .gitignore  frames_2025-08-18_22.43.13.gv  frames_2025-08-18_22.55.03.gv  frames_2025-08-19_22.27.25.gv  kil_gazebo.sh
.github/workflows/: code_reviewer.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/wd_lift_robot/local/lib/python3.10/dist-packages/wd_lift_robot-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/wd_lift_robot/share/ament_index/resource_index/package_run_dependencies/: wd_lift_robot
install/wd_lift_robot/share/ament_index/resource_index/parent_prefix_path/: wd_lift_robot
install/wd_lift_robot/share/wd_lift_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wd_lift_robot/share/wd_lift_robot/cmake/: wd_lift_robotConfig-version.cmake  wd_lift_robotConfig.cmake
install/wd_lift_robot/share/wd_lift_robot/config/: cartographer.lua  controllers.yaml  nav2_params.yaml  robot_view.rviz  slam_toolbox_params.yaml
install/wd_lift_robot/share/wd_lift_robot/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/wd_lift_robot/share/wd_lift_robot/launch/: complete_robot.launch.py  gazebo.launch.py  navigation.launch.py  robot_state_publisher.launch.py  slam.launch.py
install/wd_lift_robot/share/wd_lift_robot/urdf/: robot.urdf.xacro
install/wd_lift_robot/share/wd_lift_robot/worlds/: small_house.world
log/: latest_build
src/cartographer/: CMakeLists.txt  package.xml
src/cartographer/config/: cartographer.lua
src/cartographer/launch/: cartographer.launch.py
src/cartographer/rviz/: cartographer.rviz
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: trolley.yaml
src/navigation/launch/: navigation_tr.launch.py
src/navigation/maps/: house_map.pgm  house_map.yaml  ps1map1.pgm
src/navigation/rviz/: nav2.rviz
src/navigation/scripts/: laser_fix_diagnostic.py  twist_converter.py
src/wd_lift_robot/: CMakeLists.txt  setup.py
src/wd_lift_robot/config/: nav2_params.yaml  robot_view.rviz  slam_toolbox_params.yaml
src/wd_lift_robot/launch/: complete_robot.launch.py  gazebo.launch.py  slam.launch.py
src/wd_lift_robot/scripts/: hydraulic_controller.py
src/wd_lift_robot/urdf/: robot.urdf.xacro
src/wd_lift_robot/wd_lift_robot/: simple_teleop_node.py  teleop_node.py
src/wd_lift_robot/worlds/models/turtlebot3_waffle_pi/: model-1_4_.sdf  model.sdf
(+286 files in other folders)
